attempting to fix spacing

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .blog .blog-post {
-  margin-bottom: 40px;
+  margin-bottom: 140px;
 }
 .blog .blog-post header {
   position: relative;
@@ -8,9 +8,9 @@
   width: 360px;
 }
 .blog .blog-post .blog-content {
-  padding: 15px 28px;
+  padding: 15px 128px;
   border: 1px solid #f5f5f5;
-  height: 245px;
+  height: 200px;
 }
 .blog .blog-post .blog-content h4 {
   margin: 20px 0;
@@ -31,7 +31,7 @@
 .blog .blog-post .blog-content .post-meta {
   text-transform: uppercase;
   margin-bottom: 12px;
-  padding-bottom: 20px;
+  padding-bottom: 120px;
   font-size: 12px;
   border-bottom: 1px solid #F5F5F5;
 }
